--- a/ZigbeeMobileApp/Resources/layout/fragment1.axml
+++ b/ZigbeeMobileApp/Resources/layout/fragment1.axml
@@ -6,13 +6,13 @@
     <Button
         android:text="Dodaj pokój"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="38.0dp"
         android:id="@+id/btnAddRoom"
         android:layout_marginTop="110px" />
     <Button
         android:text="Pokaż plan budynku"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="38.0dp"
         android:id="@+id/btnShowMap" />
     <ListView
         android:minWidth="25px"
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:id="@+id/roomsList"
         android:layout_marginTop="0px"
-        android:paddingTop="50px"
+        android:paddingTop="30px"
         android:textAlignment="center"
         android:layout_marginLeft="5px"
         android:layout_marginRight="5px" />
